add openapi part 2
